# fleen-el-guitar

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  install.sh
.github/workflows/: build.yml
.qwen/: settings.json
assets/presets/: clean.json  crunch.json  default.json  high_gain.json  lead.json
docs/: API.md  DEVELOPER_GUIDE.md  FAQ.md  GETTING_STARTED.md  README.md  USER_MANUAL.md
homebrew/: fleen-el-guitar.rb
scripts/: install.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/: LedIndicator.cpp  LedIndicator.h  MeterDisplay.cpp  MeterDisplay.h  OpenGLVisualizer.cpp  OpenGLVisualizer.h  PresetSelector.cpp  PresetSelector.h  SkeuomorphicKnob.cpp  SkeuomorphicKnob.h  TestKeyboard.cpp  TestKeyboard.h
src/dsp/: GainStage.h  ToneStack.h
src/lookandfeel/: CustomLookAndFeel.cpp  CustomLookAndFeel.h
src/state/: PresetManager.cpp  PresetManager.h  StateManager.cpp  StateManager.h
src/utils/: GoldenRatio.h
